--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,20 @@
 {
   "extends": [
     "development"
-  ]
+  ],
+  "hints": {
+    "button-type": "off",
+    "axe/keyboard": [
+      "default",
+      {
+        "nested-interactive": "off"
+      }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
+  }
 }
